[package]
name = "keyrock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[[bin]]
name = "binance"
path = "src/binance.rs"

[[bin]]
name = "bitstamp"
path = "src/bitstamp.rs"


[dependencies]
tonic="0.7.1"
tokio= {version = "1.18.0", features = ["full"]}
prost = "0.10.1"
log = "0.4.14"
tokio-stream = "0.1.8"
serde_json = "1.0.82"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"

[build-dependencies]
tonic-build= "0.7.2"